# fast_api

./: README.md  main.py  pyproject.toml
