[tool.poetry]
name = "fast-api"
version = "0.1.0"
description = ""
authors = ["SusanDas <45216200+susd1234@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.7"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
